@@ -1,0 +1,18 @@
+XDG_VTNR=2
+XDG_SESSION_ID=c6
+SHELL=/bin/bash
+TERM=linux
+HUSHLOGIN=FALSE
+USER=root
+MAIL=/var/mail/root
+PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/sbin::/usr/sbin:/opt/vc/bin/:/opt/vc/sbin/
+PWD=/root
+LANG=en_US.UTF-8
+NODE_PATH=/usr/lib/nodejs:/usr/lib/node_modules:/usr/share/javascript
+SHLVL=1
+XDG_SEAT=seat0
+HOME=/root
+LOGNAME=root
+LC_CTYPE=en_US.UTF-8
+XDG_RUNTIME_DIR=/run/user/0
+_=/usr/bin/env
